<resources>
    <string name="app_name">Para Pesquisa</string>
    <string name="message_access_as">Access as</string>
    <string name="text_server">Server</string>
    <string name="text_username">User</string>
    <string name="text_password">Password</string>
    <string name="button_sign_in">Sign In</string>
    <string name="message_network_error">Sorry, we couln\'t connect to server</string>
    <string name="message_all_fields_required">All fields are required</string>
    <string name="title_activity_coordinator_main">CoordinatorMainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="text_my_surveys">My Surveys</string>
    <string name="text_backup">Backup</string>
    <string name="text_help">Help</string>
    <string name="text_about_app">About Para Pesquisa</string>
    <string name="text_sign_out">Sign Out</string>
    <string name="text_from_dates">From %1$s to %2$s</string>
    <string name="text_from">Since %s</string>
    <string name="undefined_date">Undefined dates</string>
    <string name="text_days_remaining">days remaining</string>
    <string name="text_submissions_remaining">submissions remaining</string>
    <string name="action_sync">Sync</string>
    <string name="action_notifications">Notifications</string>
    <string name="tab_all_submissions">All Submissions</string>
    <string name="tab_pending_correction">Pending Correction</string>
    <string name="tab_rescheduled">Rescheduled</string>
    <string name="tab_cancelled">Cancelled</string>
    <string name="tab_pending_approval">Waiting Approval</string>
    <string name="tab_approved">Approved</string>
    <string name="tab_waiting_sync">Waiting Sync</string>
    <string name="text_submission">Submission</string>
    <string name="text_approved">Approved</string>
    <string name="text_pending_approve">Waiting approval</string>
    <string name="text_rescheduled">Rescheduled</string>
    <string name="text_cancelled">Cancelled</string>
    <string name="text_pending_correction">Pending correction</string>
    <string name="text_since">since %s</string>
    <string name="text_on">on %s</string>
    <string name="text_to">to %s</string>
    <string name="text_remaining_surveys">/%d remaining surveys</string>
    <string name="button_next">Next</string>
    <string name="button_previous">Previous</string>
    <string name="action_stop">Stop</string>
    <string name="action_send">Send</string>
    <string name="text_private_field_disclaimer">This is a private field, it should be filled by the person being searched. Give the phone to the person and then ask them to tap Confirm.</string>
    <string name="button_confirm">Confirm</string>
    <string name="text_other">Other…</string>
    <string name="message_validation_required">This is a required field</string>
    <string name="message_validation_out_of_range">The value is out of range</string>
    <string name="message_internal_error">Oh no… We found an internal error!</string>
    <string name="message_check_form_errors">There\'s pending items in the form</string>
    <string name="message_please_wait">Please wait…</string>
    <string name="message_private_answer">Private answer</string>
    <string name="button_cancel">Cancel</string>
    <string name="title_select_option">Select an Option</string>
    <string name="message_server_error">We coundn\'t found the server</string>
    <string name="action_extra_data">Extra Data</string>
    <string name="title_in_progress">In Progress</string>
    <string name="text_new_submission">New submission</string>
    <string name="atext_started_on">Started in %s</string>
    <string name="message_sync_completed">Sync done</string>
    <string name="title_reason_to_stop">Select a reason</string>
    <string name="text_reschedule">Rescheduled</string>
    <string name="title_cancel_submission">Cancel Submission</string>
    <string name="message_cancel_submission">Are you sure to cancel this submission?</string>
    <string name="button_yes">Yes</string>
    <string name="button_no">No</string>
    <string name="error_not_users_enough_to_transfer">You need to have at least 2 users to transfer.</string>
    <string name="message_reschedule_submission">This submission was rescheduled to %s.</string>
    <string name="title_send_submission">Finish and send</string>
    <string name="message_send_submission_disclaimer">The submission will not be editable after sending, unless it is requested by the coordinator. Are you sure to proceed?</string>
    <string name="button_continue">Continue</string>
    <string name="button_stop">Stop</string>
    <string name="text_survey_in_progress">Submission in progress</string>
    <string name="title_warning">Warning</string>
    <string name="button_ok">OK</string>
    <string name="message_survey_in_progress">You cannot start a new submission because you already have a submission in progress. You must reschedule or cancel the submission by tapping the STOP button within the form.</string>
    <string name="message_submission_quota_excedeed">You don\'t have submissions to fill in this form</string>
    <string name="text_in_progress">In progress</string>
    <string name="text_waiting_sync">Waiting sync</string>
    <string name="message_no_surveys">There\'s no submissions pending or done. You can start a new submission by tapping the corresponding button.</string>
    <string name="title_reschedule_submission">Reschedule Submission</string>
    <string name="text_powered_by">Powered by</string>
    <string name="message_logout_warning">You can\'t logout your account when there is pending submissions sync with the server. Please make sure your tablet or smartphone is connected to the Internet and try sync again.</string>
    <string name="message_expired_form">The deadline for this form is over</string>
    <string name="message_not_started_form">This research can only be initiated on %1$s</string>
    <string name="message_reschedule_date_is_before_now">Rescheduling must be for a later date</string>
    <string name="message_reschedule_date_is_after_pub_end">Rescheduling must be before the form deadline</string>
    <string name="action_report">Reports</string>
    <string name="surveys">Surveys</string>
    <string name="message_no_surveys_moderator">There\'s no submissions for this form</string>
    <string name="submitted_by">Sent by %s</string>
    <string name="message_sign_in_failed">Failed to sign in</string>
    <string name="text_reject">Reject</string>
    <string name="text_request_correction">Request\ncorrection</string>
    <string name="text_approve">Approve</string>
    <string name="message_invalid_value">Invalid value for this field</string>
    <string name="title_add_comment">Add Comment</string>
    <string name="button_done">Done</string>
    <string name="title_approve_submission">Approve submission</string>
    <string name="message_approve_submission_confirmation">Are you sure to approve this submission?</string>
    <string name="title_reject_submission">Reject submission</string>
    <string name="message_reject_submission_confirmation">Are you sure to reject this submission?</string>
    <string name="title_correction_requested">Correction requested</string>
    <string name="message_correction_requested">Submission status changed to Pending correction (%s)</string>
    <string name="text_all_survey_takers">All survey takers</string>
    <string name="message_no_comments">You cannot request correction without add any comment</string>
    <string name="title_remove_comment">Remove comment</string>
    <string name="message_remove_comment_confirmation">Are you sure want to remove this comment?</string>
    <string name="title_edit_comment">Edit comment</string>
    <string name="text_no_notifications">No notifications</string>
    <string name="title_select_survey_taker">Select survey taker</string>
    <string name="message_all_survey_takers">All survey takers (%d)</string>
    <string name="message_search_surveys">Search surveys</string>
    <string name="title_global_report">Global Report</string>
    <string name="text_surveys_assigned_to_me">Surveys assigned to me</string>
    <string name="text_individual_reports">Individual Reports</string>
    <string name="text_survey_takers">Survey takers</string>
    <string name="title_all_surveys_submissions">All Surveys Submissions</string>
    <string name="text_total_goal">Total goal</string>
    <string name="text_still_remaining">Still remaining</string>
    <string name="title_report">Report</string>
    <string name="text_remaining_days">Remaining days</string>
    <string name="slash_separator" translatable="false"> / %1$s %2$s</string>
    <string-array name="edit_mode">
        <item>View</item>
        <item>Edit</item>
    </string-array>
    <plurals name="new_forms_assigned">
        <item quantity="one">A new form was assigned to you</item>
        <item quantity="other">%d new forms were assigned to you</item>
    </plurals>
    <plurals name="forms_removed">
        <item quantity="one">A form was removed by your moderator</item>
        <item quantity="other">%d form were removed by your moderator</item>
    </plurals>
    <plurals name="approved_submissions">
        <item quantity="one">A submission was approved for form %2$s</item>
        <item quantity="other">%1$d submissions were approved for form %2$s</item>
    </plurals>
    <plurals name="waiting_correction_submissions">
        <item quantity="one">There\'s a submission waiting for correction in form %2$s</item>
        <item quantity="other">There\'s %1$d submissions waiting for correction in form %2$s</item>
    </plurals>
    <plurals name="waiting_approval_submissions">
        <item quantity="one">There\'s a submission waiting for approval in form %2$s</item>
        <item quantity="other">There\'s %1$d submissions waiting for approval in form %2$s</item>
    </plurals>
    <plurals name="reproved_submissions">
        <item quantity="one">A submission were reproved for form %2$s</item>
        <item quantity="other">%1$d submissions were reproved for form %2$s</item>
    </plurals>
    <string name="message_date_changed">The due date of form %1$s changed to %2$s</string>
    <string name="message_quota_changed">Your submission quota for form %1$s changed to %2$d</string>
    <string name="button_clear_notifications">Clear Notifications</string>
    <string name="title_individual_reports">Individual Reports</string>
    <string name="text_surveys_by">Submissions from %s</string>
    <string name="title_transfer_submissions">Transfer submissions from</string>
    <string name="title_user_is_going_to_cede">%s is going to cede</string>
    <string name="title_transfer_to">Transfer to</string>
    <string name="title_transfer_submissions_confirmation">Transfer submissions</string>
    <string name="text_new_submissions_counter">Unfulfilled (%d)</string>
    <string name="text_waiting_approval_submissions_counter">Waiting approval (%d)</string>
    <string name="text_waiting_correction_submissions_counter">Waiting correction (%d)</string>
    <string name="text_approved_submissions_counter">Approved (%d)</string>
    <string name="text_cancelled_submissions_counter">Cancelled (%d)</string>
    <string name="text_rescheduled_submissions_counter">Rescheduled (%d)</string>
    <string name="text_all_submissions_counter">All submissions (%d)</string>
    <string name="message_transfer_submissions">Are you sure to transfer all submissions from %1$s to %2$s?</string>
    <string name="message_transfer_new_submissions">Are you sure to transfer all unfulfilled submissions from %1$s to %2$s?</string>
    <string name="message_transfer_status_submissions">Are you sure to transfer all %1$s submissions from %2$s to %3$s?</string>
</resources>