<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:src="@drawable/logo_app" />

            <EditText
                android:id="@+id/server_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:drawableLeft="@drawable/login_server_icon"
                android:drawablePadding="5dp"
                android:drawableStart="@drawable/login_server_icon"
                android:hint="@string/text_server"
                android:inputType="textUri"
                android:singleLine="true" />

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:drawableLeft="@drawable/login_user_icon"
                android:drawablePadding="5dp"
                android:drawableStart="@drawable/login_user_icon"
                android:hint="@string/text_username"
                android:inputType="textNoSuggestions"
                android:singleLine="true" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:drawableLeft="@drawable/login_password_icon"
                android:drawablePadding="5dp"
                android:drawableStart="@drawable/login_user_icon"
                android:hint="@string/text_password"
                android:inputType="textPassword"
                android:singleLine="true" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ProgressBar
                    android:id="@+id/progress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/sign_in"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/button_sign_in"
                    android:theme="@style/AppTheme.Button.Accent" />

            </FrameLayout>

        </LinearLayout>

        <TextView
            style="?android:attr/textAppearanceSmall"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:drawableBottom="@drawable/logo_institutotim"
            android:gravity="center"
            android:text="@string/text_powered_by" />

    </LinearLayout>

</ScrollView>
